# sdk-nrf

./: awtk_readme.md  west.yml
awtk_example/awtk/: CMakeLists.txt  prj.conf  sample.yaml
awtk_example/awtk/boards/: nrf52840dk_nrf52840.overlay  nrf5340pdk_nrf5340_cpuapp.overlay
awtk_example/awtk/res/: assets.inc
awtk_example/awtk/res/assets/default/inc/fonts/: default.data
awtk_example/awtk/src/: awtk_config.h  awtk_platform.c  awtk_time_ms.c  awtk_tp_poll.c  main.c  wctype.h
awtk_example/awtk/src/tp/: touch_ft6206.c
awtk_example/smartwatch/: CMakeLists.txt  prj.conf  sample.yaml
awtk_example/smartwatch/src/: assets.c  awtk_config.h  awtk_date_time.c  awtk_date_time.h  awtk_display.c  awtk_mutex.c  awtk_platform.c  awtk_platform.h  awtk_tp_poll.c  awtk_tp_poll.h  main.c  wchar.h  window_main.c
awtk_example/smartwatch/src/custom_widgets/color_button/: color_button.c
awtk_example/smartwatch/src/custom_widgets/music_play_button/: draw_circle.c  draw_circle.h
awtk_example/smartwatch/src/custom_widgets/round_menu/: round_menu.c
awtk_example/smartwatch/src/custom_widgets/watch_clock/: watch_clock_pointer.c
modules/hal/nordic/nrfx/drivers/src/: nrfx_spim.c
modules/lib/gui/awtk/: CMakeLists.txt  Kconfig.awtk  README.md
modules/lib/gui/awtk/3rd/agge/agge/: clipper.h
modules/lib/gui/awtk/src/base/: canvas.c  canvas.h  ffr_draw_rounded_rect.inc  g2d.h  lcd.h  types_def.h  window_base.h  window_manager.c  window_manager.h
modules/lib/gui/awtk/src/blend/: stm32_g2d.c
modules/lib/gui/awtk/src/ext_widgets/keyboard/: keyboard.h
modules/lib/gui/awtk/src/ext_widgets/switch/: switch.h
modules/lib/gui/awtk/src/font_loader/: font_loader_ft.c
modules/lib/gui/awtk/src/lcd/: lcd_mem.inc  lcd_mem_special.c
modules/lib/gui/awtk/src/tkc/: types_def.h
modules/lib/gui/awtk/src/widgets/: check_button.h  combo_box.c  edit.h
modules/lib/gui/awtk/src/window_manager/: window_manager_default.c
modules/lib/gui/awtk/zephyr/: module.yml
zephyr/drivers/spi/: spi_nrfx_spim.c
